# torch-fire

./: README.md  pyproject.toml
torch-fire/: cross_validation.py  simple_nn.py
